--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
+    "three": "^0.144.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,5 +43,8 @@
   "devDependencies": {
     "file-loader": "^6.2.0",
     "url-loader": "^4.1.1"
-  }
+  },
+  "proxy": "http://localhost:3000",
+  "homepage": "."
+
 }
