--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gsap": "^3.11.3",
     "link-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,5 +47,4 @@
   },
   "proxy": "http://localhost:3000",
   "homepage": "."
-
 }
