--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.11.3",
+    "lil-gui": "^0.17.0",
     "link-react": "^3.0.0",
     "nice-color-palettes": "^3.0.0",
     "react": "^18.2.0",
